@@ -1,8 +1,10 @@
 webcleaner (0.19) unstable; urgency=low
 
   * fix <script> lexer code by using my own strncasecmp function
+  * correct use of logfiles in Debian init.d script
+  * minor code cleanups
 
- -- Bastian Kleineidam <calvin@debian.org>  Mon, 15 Oct 2001 16:10:16 +0200
+ -- Bastian Kleineidam <calvin@debian.org>  Wed, 17 Oct 2001 23:47:42 +0200
 
 webcleaner (0.18) unstable; urgency=low
 
